--- a/dashboard.html
+++ b/dashboard.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
   <link rel="stylesheet" href="stylesdashboard.css"> <!-- Include your CSS file -->
-  </head>
+</head>
 <body>
 <header class="top-bar">
-<img src="logo.png" alt="Logo" style="width: 100px; height: auto;">
-<div class="container">
+  <img src="logo.png" alt="Logo" style="width: 100px; height: auto;">
+  <div class="container">
     <div class="clock-container">
       <svg id="clock" width="200" height="200">
         <!-- Analog clock placeholder -->
@@ -17,34 +17,37 @@
       <div id="timeDisplay" class="digital-clock"></div> <!-- Time display placeholder -->
     </div>
   </div>
-    <!-- Add round profile button -->
-    <button id="profileBtn" class="profile-btn">Logout</button>
-  </header>
-  <nav class="sidebar">
+      <!-- Email icon -->
+      <a href="email.html" title="Open Email">
+        <img src="emaillogo.png" alt="Email Icon" style="width: 80px; height: auto; cursor: pointer; margin-top: 10px;">
+      </a>
+  <!-- Add round profile button -->
+  <button id="profileBtn" class="profile-btn">Logout</button>
+</header>
+<nav class="sidebar">
   <ul>
     <li><a href="workplace.html">Workplace</a></li>
     <li><a href="record.html">Record</a></li>
     <li><a href="help.html">Help</a></li>
-    <li><a href="aboutus.html">Aboutus</a></li>
+    <li><a href="aboutus.html">About Us</a></li>
   </ul>
 </nav>
- </div>
 <div class="container">
-    <h2>Create New User</h2>
-    <form id="signupForm">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <button type="submit">Create User</button>
-    </form>
-  </div>
+  <h2>Create New User</h2>
+  <form id="signupForm">
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <button type="submit">Create User</button>
+  </form>
+</div>
 <script src="dashboard.js"></script>
 <script src="updateTime.js"></script>
-  <script src="signup.js"></script>
+<script src="signup.js"></script>
 </body>
 </html>
